--- a/src/package.json
+++ b/src/package.json
@@ -33,7 +33,9 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.0.8",
         "bootstrap": "^5.3.5",
+        "bootstrap-icons": "^1.11.3",
         "sass": "^1.87.0",
-        "vue": "^3.5.13"
+        "vue": "^3.5.13",
+        "vue-good-table-next": "^0.2.2"
     }
 }
