--- a/src/package.json
+++ b/src/package.json
@@ -35,6 +35,7 @@
         "bootstrap": "^5.3.5",
         "bootstrap-icons": "^1.11.3",
         "sass": "^1.87.0",
+        "swiper": "^11.2.6",
         "vue": "^3.5.13",
         "vue-good-table-next": "^0.2.2"
     }
